# LineMatch

./: CMakeLists.txt  README.md
examples/: linematch.cpp
examples/others/: compute_descriptors.cpp  knn_matching.cpp  lines_extraction.cpp  lsd_lines_extraction.cpp  matching.cpp  radius_matching.cpp
include/opencv2/line_descriptor/: descriptor.hpp
src/: draw.cpp  precomp.hpp
